# media-club

./: CODEOWNERS  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/media-club-api/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
apps/media-club-api/src/: config.rs  errors.rs  main.rs
apps/media-club-api/src/db/: media_repo.rs  mod.rs  users_repo.rs
apps/media-club-api/src/models/: app.rs  auth.rs  client_state.rs  favorites.rs  media.rs  mod.rs  users.rs
apps/media-club-api/src/models/constants/: anilist_constants.rs  mod.rs
apps/media-club-api/src/routes/: app.rs  auth_routes.rs  auth_sync.rs  common.rs  common_routes.rs  media.rs  mod.rs  users.rs  users_routes.rs
apps/media-club-api/src/services/: anilist_auth_service.rs  anilist_favorites_service.rs  anilist_service.rs  auth_service.rs  mod.rs  throttled_client.rs
apps/web-ui/: .env.development  README.md  index.html  package-lock.json  package.json
apps/web-ui/src/: main.tsx
apps/web-ui/src/api/: tags.ts
apps/web-ui/src/components/: AnilistChip.tsx  CharacterList.tsx  GlobalErrorFallback.tsx  HomeBreadcrumb.tsx  MediaInfoDrawer.tsx  MediaPageBreadcrumbs.tsx  MenuBar.tsx  MenuWrapper.tsx  Puller.tsx  RegistrationPageBreadcrumbs.tsx
apps/web-ui/src/hooks/: useAnilistHomeMedia.ts  useAnilistMediaQuery.ts  useAnilistUsersMediaInfo.ts  useDateFormat.ts  useGetMedia.ts  useGetUsers.ts  usePreferredMediaName.ts  useSafeAnilistUrl.ts  useUserFavorites.ts
apps/web-ui/src/pages/: HomePage.tsx  MediaPage.tsx  RegistrationPage.tsx
apps/web-ui/src/types/: characters.types.ts  drawers.types.ts  media.types.ts
src/: App.tsx  main.tsx  store.ts
src/api/anilist/: anilistApi.queries.ts  anilistApi.ts  anilistApi.types.ts
src/components/: FilterSideDrawer.tsx  MediaInfoDrawer.tsx
src/constants/: media.ts
src/css/: app.css
src/hooks/: useConfig.ts  useGetMedia.ts
src/pages/: HomePage.tsx
src/types/: mediaInfo.types.ts
(+24 files in other folders)
