[package]
name = "media-club-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rdsdata = "1.93.0"
axum = "0.8.8"
lambda_http = "1.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }
