[package]
name = "media-club-api"
version = "1.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.101.0"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
governor = "0.10.4"
lambda_http = "1.0.0"
reqwest = { version = "0.13", default-features = true, features = ["json", "rustls", "multipart", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
